# jop

./: .appveyor.yml  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE
cmake/: StandardProjectSettings.cmake
include/jvp/: Parser.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/jvp/: Parser.identifier.test.cpp
